--- a/apps/scal/css/main.css
+++ b/apps/scal/css/main.css
@@ -21,7 +21,6 @@
 	padding-top: 50px;
 	margin-top: -50px;
 }
-
 #my-sections li div:not(.loading) {
 	border-radius: 5px;
 	border: solid 1px #999999;
@@ -34,16 +33,32 @@
 }
 
 #my-sections li {
+	position: relative;
 	margin-bottom: 4px;
 }
 
-#my-sections li div:hover {
-	transform: scale(0.95);
-	-webkit-transform: scale(0.95);
-	-moz-transform: scale(0.95);
-	-ms-transform: scale(0.95);
+.close {
+	position: absolute;
+	right: 0;
+	bottom: 0;
 }
 
+#my-sections li > div:hover {
+	-webkit-box-shadow: 0px 0px 4px 2px #D50E0E;
+    -moz-box-shadow: 0px 0px 4px 2px #D50E0E;
+    -o-box-shadow: 0px 0px 4px 2px #D50E0E;
+    -ms-box-shadow: 0px 0px 4px 2px #D50E0E;
+    box-shadow: 0px 0px 4px 2px #D50E0E;
+}
+
+/*#my-sections li div .close{
+	font-size:16px;
+	background: linear-gradient(top, #990000, #800000);
+	background: -webkit-linear-gradient(top, #990000, #800000);
+    background: -moz-linear-gradient(top, #990000, #800000);
+    background: -ms-linear-gradient(top, #990000, #800000);
+    background: -o-linear-gradient(top, #990000, #800000);
+}*/
 .text-logo {
 	color: #990000 !important;
 }
@@ -53,7 +68,7 @@
 }
 
 #semesters li:hover {
-	cursor: pointer;
+	cursor:pointer;
 }
 
 #semester-highlighted {
