--- a/css/main.css
+++ b/css/main.css
@@ -119,11 +119,11 @@ footer img {
 }
 
 #my-sections li > div:hover {
-	-webkit-box-shadow: 0px 0px 4px 2px #D50E0E;
-    -moz-box-shadow: 0px 0px 4px 2px #D50E0E;
-    -o-box-shadow: 0px 0px 4px 2px #D50E0E;
-    -ms-box-shadow: 0px 0px 4px 2px #D50E0E;
-    box-shadow: 0px 0px 4px 2px #D50E0E;
+	-webkit-box-shadow: 0px 0px 4px 2px #dedede;
+    -moz-box-shadow: 0px 0px 4px 2px #dedede;
+    -o-box-shadow: 0px 0px 4px 2px #dedede;
+    -ms-box-shadow: 0px 0px 4px 2px #dedede;
+    box-shadow: 0px 0px 4px 2px #dedede;
 }
 
 /*#my-sections li div .close{
@@ -166,6 +166,7 @@ select {
 	color: black;
 	border-color: #dedede;
 	background-color: transparent;
+	margin-bottom: 20px;
 }
 
 #review .btn-large:hover {
@@ -174,6 +175,6 @@ select {
 	background-color: #dedede;
 }
 
-.export {
+#export {
 	padding: 20px;
 }
