--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ footer {
 }
 
 footer img {
-	width: 80px; 
+	width: 80px;
 	height: auto;
 }
 
@@ -183,4 +183,33 @@ select {
 #sections {
 	width: 80%;
 	margin: 0 auto;
+}
+
+#calendar {
+	margin: 0 auto;
+	width: 50%;
+	font-size: 8px;
+	position: relative;
+}
+
+#calendar .section {
+	position: absolute;
+	background-color: red;
+	width: 16.666%;
+}
+
+#calendar table {
+	width: 100%;
+}
+
+#calendar table td {
+	height: 16px;
+	width: 16.666%;
+	border: 1px black solid;
+}
+
+#calendar table th {
+	height: 16px;
+	width: 16.666%;
+	border: 1px black solid;
 }
