--- a/css/main.css
+++ b/css/main.css
@@ -226,3 +226,15 @@ select {
 	margin-top: -25px;
 	padding-top: 25px;
 }
+
+.nav-tabs > li, .nav-pills > li {
+    float:none;
+    display:inline-block;
+    *display:inline; /* ie7 fix */
+     zoom:1; /* hasLayout ie7 trigger */
+}
+
+.nav-tabs, .nav-pills {
+    text-align:center;
+    margin-bottom: 15px;
+}
