--- a/css/main.css
+++ b/css/main.css
@@ -193,6 +193,10 @@ select {
 	background-color: #e0e0e0;
 }
 
+#review h3 {
+	margin-bottom: 0;
+}
+
 #export {
 	padding: 20px;
 }
@@ -211,10 +215,11 @@ select {
 #empty-msg {
 	width: 70%;
 	margin: 0 auto;
+	margin-top: 20px;
 }
 
 #calendar {
-	margin: 15px auto;
+	margin: 25px auto;
 	width: 65%;
 	font-size: 10px;
 	position: relative;
@@ -284,6 +289,10 @@ select {
 	background-color: #ffab00 !important;
 }
 
+#clear-sections, #load-calendar {
+	margin-top: 15px;
+}
+
 @media only screen and (max-device-width: 480px) {
 	#top-content h2 {
 		font-size: 35px;
@@ -295,5 +304,10 @@ select {
 
 	#calendar {
 		width: 95%;
+	}
+
+	#calendar table th {
+		white-space: nowrap;
+  	overflow: hidden;
 	}
 }
